<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/channelSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_a_part_name" />

    <LinearLayout
        android:id="@+id/frontLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/channelSpinner"
        android:padding="8dp"
        android:weightSum="10" >

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3" />

        <Button
            android:id="@+id/channelFront"
            style="@style/ChannelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/button"
            android:text="@string/FRONT" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frontMidLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frontLayout"
        android:padding="8dp"
        android:weightSum="5" >

        <Button
            android:id="@+id/channelLeftFront"
            style="@style/ChannelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button"
            android:text="@string/FRONT_LEFT" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/channelRightFront"
            style="@style/ChannelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button"
            android:text="@string/FRONT_RIGHT" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rearMidLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frontMidLayout"
        android:padding="8dp"
        android:weightSum="5" >

        <Button
            android:id="@+id/channelLeftRear"
            style="@style/ChannelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button"
            android:text="@string/REAR_LEFT" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/channelRightRear"
            style="@style/ChannelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button"
            android:text="@string/REAR_RIGHT" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rearMidLayout"
        android:padding="8dp"
        android:weightSum="10" >

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3" />

        <Button
            android:id="@+id/channelRear"
            style="@style/ChannelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/button"
            android:text="@string/REAR" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3" />
    </LinearLayout>

</RelativeLayout>