<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_custom"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:baselineAligned="false" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/EQUALIZER"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:contentDescription="@string/_empty"
        android:src="@drawable/red_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/background" >

        <ImageView
            android:id="@+id/equalizerEqualizerReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="1dp"
            android:contentDescription="@string/_empty"
            android:src="@drawable/round_reset" />

        <LinearLayout
            android:id="@+id/equalizerLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/equalizerEqualizerReset"
            android:orientation="horizontal" >
            
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_buttons_background"
            android:contentDescription="@string/_empty"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/_empty"
            android:src="@drawable/gray_bar" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_buttons_background"
            android:contentDescription="@string/_empty"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/OK"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>