<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_custom" >

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:baselineAligned="false" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/SAVED_RECORDINGS"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/redbar"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_below="@id/titleLayout"
        android:contentDescription="@string/_empty"
        android:src="@drawable/red_bar" />

    <!-- 
    <LinearLayout
        android:id="@+id/bottomMenuLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/emailButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_buttons_background"
            android:contentDescription="@string/_empty"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/EMAIL"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/_empty"
            android:src="@drawable/gray_bar" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_buttons_background"
            android:contentDescription="@string/_empty"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/DELETE"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    -->
    
        <LinearLayout
        android:id="@+id/bottomMenuLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/emailButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_buttons_background"
            android:contentDescription="@string/_empty"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/EMAIL"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/_empty"
            android:src="@drawable/gray_bar" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_buttons_background"
            android:contentDescription="@string/_empty"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/DELETE"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        
                <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/_empty"
            android:src="@drawable/gray_bar" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/recordingsListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottomMenuLayout"
        android:layout_below="@id/redbar"
        android:background="@drawable/background" />

</RelativeLayout>